[package]
name = "contract-bridge-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
casper-contract = { git = "https://github.com/rafal-ch/casper-node", branch = "contract_error_dump_on_1_5", default-features = false }
casper-engine-test-support = { git = "https://github.com/rafal-ch/casper-node", branch = "contract_error_dump_on_1_5", features = [
  "test-support",
] }
casper-execution-engine = { git = "https://github.com/rafal-ch/casper-node", branch = "contract_error_dump_on_1_5" }
casper-types = { git = "https://github.com/rafal-ch/casper-node", branch = "contract_error_dump_on_1_5" }
k256 = { version = "0.10.4", features = ["pem"] }
base16 = { version = "0.2.1", default-features = false }

casper-common = { path = "../casper-common" }
contract-bridge = { path = "../contract-bridge" }
contract-util = { path = "../contract-util" }
