[package]
name = "contract-bridge"
version = "0.1.0"
edition = "2018"

[features]
default = ["std", "test-support"]
std = ["thiserror", "contract-util/std"]
onchain = ["contract-util/onchain"]
test-support = ["casper-contract/test-support"]

[dependencies]
casper-contract = { git = "https://github.com/rafal-ch/casper-node", branch = "contract_error_dump_on_1_5", features = [
  "test-support",
] }
casper-types = { git = "https://github.com/rafal-ch/casper-node", branch = "contract_error_dump_on_1_5" }
contract-util = { path = "../contract-util", default-features = false }
casper-common = { path = "../casper-common" }
num_enum = { version = "0.5.7", default-features = false }
once_cell = { version = "1.12.0", default-features = false }
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
thiserror = { version = "1.0.31", optional = true }

[[bin]]
name = "bridge-contract"
path = "src/bin/bridge-contract.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[build-dependencies]
cfg_aliases = "0.1.1"
