[package]
name = "contract-util"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["thiserror"]
onchain = ["casper-contract/no-std-helpers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = { git = "https://github.com/Jiuhong-casperlabs/casper-node.git", branch = "contract_error_dump_on_1_5", features = [
  "test-support",
] }
casper-types = { git = "https://github.com/Jiuhong-casperlabs/casper-node.git", branch = "contract_error_dump_on_1_5" }

num_enum = { version = "0.5.7", default-features = false }

once_cell = { version = "1.12.0", default-features = false }
thiserror = { version = "1.0.31", optional = true }

# casper types is max 0.7.2
k256 = { version = "0.10.4", default-features = false, features = ["pem"] }
base16 = { version = "0.2.1", default-features = false }

[build-dependencies]
cfg_aliases = "0.1.1"
